package helron.foundationWizzard.com.ihm;

public enum FieldType {
    DATATYPE, ID, STRING, ASSET_ENUM, LIST, BOOLEAN, INTEGER, FLOAT
}
