@startuml

title __IHM's Class Diagram__\n

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.App {
          + App()
          {static} + main()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      enum FieldType {
        ASSET_ENUM
        BOOLEAN
        FLOAT
        INTEGER
        LIST
        STRING
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.Form {
          {static} + dim : Dimension
          - assetID : String
          - class_ID : String
          {static} - gb : GridBagLayout
          {static} - gbc : GridBagConstraints
          - inputs : LinkedHashMap<String, String>
          + Form()
          + Form()
          + getInputs()
          + setInputs()
          - addValidateButton()
          - buildEachRows()
          - buildField()
          - buildFormRow()
          - identifyType()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      abstract class helron.foundationWizzard.com.ihm.FormRequestDialog {
          # classID : String
          # newIdField : JTextField
          + FormRequestDialog()
          {abstract} ~ addValidateButtonListener()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.FormRequestDialogForClass {
          ~ existingAssetList : ListenedJComboBox<String>
          + FormRequestDialogForClass()
          ~ addValidateButtonListener()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.FormRequestDialogForSetList {
          - dataList : DefaultListModel<String>
          - jList : JList<String>
          + FormRequestDialogForSetList()
          ~ addValidateButtonListener()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.FormsContainer {
          {static} + dim : Dimension
          + FormsContainer()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.Home {
          + Home()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.JImagePanel {
          - image : Image
          - stretch : Boolean
          + JImagePanel()
          + JImagePanel()
          {static} + main()
          + setStretch()
          # paintComponent()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.JLink {
          + JLink()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.JtextFileChooser {
          + JtextFileChooser()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.ListenedJCheckBox {
          - label : String
          + ListenedJCheckBox()
          + focusGained()
          + focusLost()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.ListenedJComboBox {
          - label : String
          + ListenedJComboBox()
          + focusGained()
          + focusLost()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.ListenedJList {
          - dataList : DefaultListModel<String>
          - label : String
          + ListenedJList()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.ListenedJSpinner {
          - label : String
          + ListenedJSpinner()
          + stateChanged()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.ListenedTextField {
          - label : String
          + ListenedTextField()
          + focusGained()
          + focusLost()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.LuaScriptFrame {
          + LuaScriptFrame()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.MainFrame {
          + MainFrame()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.PlusButton {
          + PlusButton()
          + PlusButton()
          + PlusButton()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.SplitPanel {
          - leftSidePanel : JPanel
          - rightSidePanel : JPanel
          + SplitPanel()
          + getLeftSidePanel()
          + getRightSidePanel()
          + setLeftSidePanel()
          + setRightSidePanel()
      }
    }
  }
  

  namespace helron.foundationWizzard.com {
    namespace ihm {
      class helron.foundationWizzard.com.ihm.ValidateButton {
          + ValidateButton()
      }
    }
  }
  

  helron.foundationWizzard.com.ihm.App o-- helron.foundationWizzard.com.api.ApiStructuresExtractor : structures
  helron.foundationWizzard.com.ihm.Form -up-|> javax.swing.JPanel
  helron.foundationWizzard.com.ihm.Form o-- helron.foundationWizzard.com.ihm.FormsContainer : formsContainer
  helron.foundationWizzard.com.ihm.Form o-- helron.foundationWizzard.com.api.ApiStructuresExtractor : structures
  helron.foundationWizzard.com.ihm.FormRequestDialog -up-|> javax.swing.JDialog
  helron.foundationWizzard.com.ihm.FormRequestDialog o-- helron.foundationWizzard.com.api.ApiStructuresExtractor : structures
  helron.foundationWizzard.com.ihm.FormRequestDialog o-- helron.foundationWizzard.com.ihm.FormsContainer : tabsContainer
  helron.foundationWizzard.com.ihm.FormRequestDialogForClass -up-|> helron.foundationWizzard.com.ihm.FormRequestDialog
  helron.foundationWizzard.com.ihm.FormRequestDialogForSetList -up-|> helron.foundationWizzard.com.ihm.FormRequestDialog
  helron.foundationWizzard.com.ihm.FormsContainer -up-|> javax.swing.JTabbedPane
  helron.foundationWizzard.com.ihm.Home -up-|> javax.swing.JPanel
  helron.foundationWizzard.com.ihm.JImagePanel -up-|> javax.swing.JPanel
  helron.foundationWizzard.com.ihm.JLink -up-|> javax.swing.JTextField
  helron.foundationWizzard.com.ihm.JtextFileChooser -up-|> javax.swing.JTextField
  helron.foundationWizzard.com.ihm.ListenedJCheckBox .up.|> java.awt.event.FocusListener
  helron.foundationWizzard.com.ihm.ListenedJCheckBox -up-|> javax.swing.JCheckBox
  helron.foundationWizzard.com.ihm.ListenedJCheckBox o-- helron.foundationWizzard.com.ihm.Form : activeForm
  helron.foundationWizzard.com.ihm.ListenedJComboBox .up.|> java.awt.event.FocusListener
  helron.foundationWizzard.com.ihm.ListenedJComboBox -up-|> javax.swing.JComboBox
  helron.foundationWizzard.com.ihm.ListenedJComboBox o-- helron.foundationWizzard.com.ihm.Form : activeForm
  helron.foundationWizzard.com.ihm.ListenedJList -up-|> javax.swing.JList
  helron.foundationWizzard.com.ihm.ListenedJList o-- helron.foundationWizzard.com.ihm.Form : activeForm
  helron.foundationWizzard.com.ihm.ListenedJSpinner .up.|> javax.swing.event.ChangeListener
  helron.foundationWizzard.com.ihm.ListenedJSpinner -up-|> javax.swing.JSpinner
  helron.foundationWizzard.com.ihm.ListenedJSpinner o-- helron.foundationWizzard.com.ihm.Form : activeForm
  helron.foundationWizzard.com.ihm.ListenedTextField .up.|> java.awt.event.FocusListener
  helron.foundationWizzard.com.ihm.ListenedTextField -up-|> javax.swing.JTextField
  helron.foundationWizzard.com.ihm.ListenedTextField o-- helron.foundationWizzard.com.ihm.Form : activeForm
  helron.foundationWizzard.com.ihm.LuaScriptFrame -up-|> javax.swing.JFrame
  helron.foundationWizzard.com.ihm.MainFrame -up-|> javax.swing.JFrame
  helron.foundationWizzard.com.ihm.PlusButton -up-|> javax.swing.JButton
  helron.foundationWizzard.com.ihm.SplitPanel -up-|> javax.swing.JPanel
  helron.foundationWizzard.com.ihm.ValidateButton -up-|> javax.swing.JButton


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
